# greenhouse-mcp-server

./: .env.example  .gitignore  README.md  claude_desktop_config.example.json  pyproject.toml
src/greenhouse_mcp/: __main__.py  auth.py  client.py  okta_handler.py  server.py
src/greenhouse_mcp/tools/: __init__.py  applications.py  candidates.py  jobs.py  outreach.py  resumes.py  search.py  triggers.py
